k8-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache-web-app
  template:
    metadata:
      labels:
        app: apache-web-app
    spec:
      containers:
      - name: httpd
        image: devops:latest
        ports:
        - containerPort: 80
