nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apache-web-app
  name: apache-deployment
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 32000
  selector:
    app: apache-web-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
